--- a/Makefile.param
+++ b/Makefile.param
@@ -1,6 +1,6 @@
 #CC = arm-hisiv100-linux-gcc
 pc1:=1
-ifdef pc1
+ifdef pc0
 	CC = gcc
 	AR = ar
 	CFLAGS = -g -DIMP_ARM_PEA
@@ -19,6 +19,14 @@ endif
 ALGODIR := /home/zm/Workingarea/imp_src/AlgoModule
 OPENCV_INCLUDES:=-I/usr/local/include/opencv -I/usr/local/include
 INCLUDES := -I/home/zm/Workingarea/imp_src/Interface/include -I$(ALGODIR)/GA/CommonAlgo/Common/include -I$(ALGODIR)/ALGO_PARA/Para/include -I$(ALGODIR)/GA/CommonAlgo/ImageAlgo/include $(OPENCV_INCLUDES)
+
+#HI3520_SDK_PATH:=/home/zm/Workingarea/Hi3520_SDK_V1.0.6.0.c2
+HI3520_SDK_PATH:=/home/zm/Workingarea/Hi3516_SDK_V1.0.2.0
+#MPP_PATH:=$(HI3520_SDK_PATH)/mpp_master
+MPP_PATH:=$(HI3520_SDK_PATH)/mpp
+MPP_INCLUDE_PATH:=-I$(MPP_PATH)/include -I$(HI3520_SDK_PATH)/extdrv
+INCLUDES:=$(INCLUDES) $(MPP_INCLUDE_PATH)
+
 
 
 
