--- a/Makefile.param
+++ b/Makefile.param
@@ -3,8 +3,8 @@ pc1:=1
 ifdef pc1
 	CC = gcc
 	AR = ar
-	CFLAGS = -g -DIMP_ARM_PEA
-#	CFLAGS = -O2 -DIMP_ARM_PEA
+#	CFLAGS = -g -DIMP_ARM_PEA
+	CFLAGS = -O2 -DIMP_ARM_PEA
 else
 	CC = arm-hismall-linux-gcc
 	AR = arm-hismall-linux-ar
