--- a/AlgoModule/PEA/code/ObjRecognition/makefile
+++ b/AlgoModule/PEA/code/ObjRecognition/makefile
@@ -1,5 +1,5 @@
 include ../../../../Makefile.param
-INCLUDES := $(INCLUDES) -I./include -I$(ALGODIR)/ALGO_PARA/Para/include/ -I$(ALGODIR)/GA/CommonAlgo/Common/include -I$(ALGODIR)/GA/CommonAlgo/ImageAlgo/include -I$(ALGODIR)/PEA/code/PEACommon/include/ -I$(ALGODIR)/GA/EventManager/include/ -I$(ALGODIR)/PEA/code/System/include/ -I$(ALGODIR)/PEA/code/ObjRecognition -I$(ALGODIR)/PEA/code/ObjRecognition/Detector/include/ -I$(ALGODIR)/AVD/include -I$(ALGODIR)/GA/WaterMark/include/ -I$(ALGODIR)/PEA/code/ObjRecognition/Tracker/include/ -I$(ALGODIR)/PEA/code/BVA/include -I$(ALGODIR)/PEA/code/ObjRecognition/Classify/include -I$(ALGODIR)/PEA/code/ObjRecognition/Classify/svmlight601
+INCLUDES := $(INCLUDES) -I./include -I$(ALGODIR)/ALGO_PARA/Para/include/ -I$(ALGODIR)/GA/CommonAlgo/Common/include -I$(ALGODIR)/GA/CommonAlgo/ImageAlgo/include -I$(ALGODIR)/PEA/code/PEACommon/include/ -I$(ALGODIR)/GA/EventManager/include/ -I$(ALGODIR)/PEA/code/System/include/ -I$(ALGODIR)/PEA/code/ObjRecognition -I$(ALGODIR)/PEA/code/ObjRecognition/Detector/include/ -I$(ALGODIR)/AVD/include -I$(ALGODIR)/GA/WaterMark/include/ -I$(ALGODIR)/PEA/code/ObjRecognition/Tracker/include/ -I$(ALGODIR)/PEA/code/BVA/include 
     
 VPATH+= 
 SRC := $(wildcard *.c)
