--- a/Makefile.PEA
+++ b/Makefile.PEA
@@ -3,7 +3,15 @@ include Makefile.param
 HI3520_SDK_PATH:=/home/zm/Workingarea/Hi3520_SDK_V1.0.6.0.c2
 MPP_PATH:=$(HI3520_SDK_PATH)/mpp_master
 MPP_INCLUDE_PATH:=-I$(MPP_PATH)/include -I$(HI3520_SDK_PATH)/extdrv
-INCLUDES:=$(INCLUDES) $(MPP_INCLUDE_PATH)
+
+OTH_INCLUDES:=-I$(ALGODIR)/PEA/code/PEACommon/include -I$(ALGODIR)/PEA/code/System/include \
+	-I$(ALGODIR)/GA/EventManager/include -I$(ALGODIR)/PEA/code/ObjRecognition \
+	-I$(ALGODIR)/PEA/code/ObjRecognition/Detector/include -I$(ALGODIR)/AVD/include \
+	-I$(ALGODIR)/GA/WaterMark/include -I$(ALGODIR)/PEA/code/ObjRecognition/Tracker/include \
+	-I$(ALGODIR)/PEA/code/ObjRecognition/Classify/include -I$(ALGODIR)/PEA/code/ObjRecognition/Classify/svmlight601 \
+	-I$(ALGODIR)/PEA/code/BVA/include
+
+INCLUDES:=$(INCLUDES) $(MPP_INCLUDE_PATH) $(OTH_INCLUDES)
 MPP_LIBS_PATH:=$(MPP_PATH)/lib
 MPP_LIBS:= $(MPP_LIBS_PATH)/libmpi.a \
 	$(MPP_LIBS_PATH)/lib_VoiceEngine.a \
@@ -15,11 +23,11 @@ MPP_LIBS:= $(MPP_LIBS_PATH)/libmpi.a \
 	$(MPP_LIBS_PATH)/libresampler.a \
 	$(MPP_LIBS_PATH)/libloadbmp.a \
 	$(MPP_LIBS_PATH)/libtde.a
-objs:=main_pea.o imp_pea_thread.o imp_draw_osd.o sample_common.o
+objs:=main_pea.o imp_pea_thread.o imp_draw_osd.o sample_common.o imp_draw_text.o
 PEA_EXE:$(objs)
 	$(CC) -lpthread -o PEA_EXE $(objs) -lm -lArmPEA $(MPP_LIBS) -L./ -L$(MPP_LIBS_PATH)
 
 $(objs):%.o:%.c
 	$(CC) $(CFLAGS) -c $< -o $@ $(INCLUDES) 2> hi
-
+	
 
